# llvm-examples

./: README.md
Dom/: CMakeLists.txt  Dom.cpp
Template/: CMakeLists.txt  Template.cpp
inputs/: .matMul4x4.dot  .simpleArithmetic.dot  MatMul4x4.c  MatMul4x4.ll  SimpleArithmetic.c  SimpleArithmetic.ll  build.sh  mat_mul_4x4.c
